# bin_packing

./: README.md  pyproject.toml
bin_packing/: BinPackingGA.py  FirstFit.py
